Fix display on iphone 5

--- a/pre-launch/style-B.css
+++ b/pre-launch/style-B.css
@@ -162,6 +162,8 @@ blockquote {
   padding: 0px 68px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   z-index: 100;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 .page-header_top-menu-opened .page-header__navigation .list-top-menu {
